fixed z-index in dropdown menu

--- a/src/components/layout/dropdown.module.css
+++ b/src/components/layout/dropdown.module.css
@@ -21,6 +21,7 @@
   margin-top: 7px;
   text-transform: none;
   overflow-y: auto;
+  z-index: 1;
 }
 
 @media (max-width: 1080px) {
